Bug 430411 - Spectacle comes up unintentionally after login
Summary: Spectacle comes up unintentionally after login
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 20.08.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-15 08:08 UTC by Attila
Modified: 2021-09-27 16:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Attila 2020-12-15 08:08:33 UTC
SUMMARY
WHen I login to KDE Plasma Spectacle comes up unintentionally.
The option "restore last session" is set in "systemsettings5".
Spectacle is definately not running before I logout.

STEPS TO REPRODUCE
1. Login to KDE.
2. Press "print" to open Spectacle.
3. Close Spectacle.
4. Reboot.
5. Login again.

OBSERVED RESULT
Spectacle comes up unintentionally.

EXPECTED RESULT
Spectacle shouldn't "autostart" after login.

SOFTWARE/OS VERSIONS

Operating System: Fedora 33
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.2
Kernel Version: 5.9.13-200.fc33.x86_64
OS Type: 64-bit
Comment 1 Nate Graham 2020-12-16 21:52:33 UTC
Can you verify that Spectacle is not running secretly in the background by opening Ksysguard and searching for a process named "spectacle" in it right before you log out?
Comment 2 Attila 2020-12-17 15:29:00 UTC
I can confirm that Spectacle is not running in the background and it didn't "autostart" today. Perhaps an update by Fedora fixed this issue.
I will have an eye on Spectacle and will report if this issue happens again so don't pay too much attention on this report. Anyway thanks for the quick reply.
Comment 3 Nate Graham 2020-12-17 18:08:12 UTC
OK thanks!
Comment 4 Bug Janitor Service 2021-01-01 04:39:16 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Bug Janitor Service 2021-01-16 04:37:58 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 6 bugs_kde-f6105d72 2021-09-26 18:25:26 UTC
~necro~

It doesn't autostart. It gets restored. Under Desktop Session settings, 'When logging in: Restore previous saved session'.

keepassxc also suffers from this.

If it is alive on the last session, it gets remembered, and reopened.
Comment 7 Nate Graham 2021-09-27 16:31:08 UTC
Git commit 8db27170d63f8a4aaff09615e51e3cc0fb115c4d by Nate Graham, on behalf of ivan tkachenko.
Committed on 27/09/2021 at 16:30.
Pushed by ngraham into branch 'master'.

Prevent session manager from restoring the app on start up

It can be quite frustrating to see Spectacle starting up during first
frames of Plasma desktop initialization and immediately taking a
screenshot of a splash screen.

M  +9    -0    src/Main.cpp

https://invent.kde.org/graphics/spectacle/commit/8db27170d63f8a4aaff09615e51e3cc0fb115c4d
Comment 8 bugs_kde-f6105d72 2021-09-27 16:52:29 UTC
tyvm