Prevent session manager from restoring the app on start up

It can be quite frustrating to see Spectacle starting up during first
frames of Plasma desktop initialization and immediately taking a
screenshot of a splash screen.

BUG: 430411